# Portal-Simulator-Non-Euclidean-Spaces

./: .gitignore  CMakeLists.txt  README.md
glad/: glad.c
glad/include/glad/: glad.h
include/: LittleOBJLoader.h  VectorUtils3.h
lib/: LittleOBJLoader.c  VectorUtils3.c
res/shader/: link.frag  link.vert  phong.frag  phong.vert  skybox.frag  skybox.vert  test.frag  test.vert
res/texture/skybox/: readme.txt
res/world/: cube.world  loop.world  loop2.world  mirage.world  resize.world  rotate.world  stretch.world  test.world
src/: buttons.cpp  buttons.h  color.cpp  color.h  component.cpp  component.h  config.h  cubemap.cpp  cubemap.h  entity.cpp  entity.h  entity.tcc  fileloader.cpp  fileloader.h  framebuffer.cpp  framebuffer.h  input.cpp  input.h  main.cpp  mesh.cpp  mesh.h  meshprimitives.inl  prototypes.cpp  prototypes.h  registries.cpp  registries.h  registry.h  room.cpp  room.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  texture.cpp  texture.h  time.cpp  time.h  transform.cpp  transform.h  world.cpp  (+4 more)
src/components/: camera.h  linkrenderer.h  material.h  mesh.h  phongrenderer.h  playercontroller.h  pointlight.h  quadcollider.h  skyboxrenderer.h
